--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -8,4 +8,8 @@
     - name: Print a message
       ansible.builtin.debug:
         msg: "Task started!"
+    - name: Move mongo.repo file
+      ansible.builtin.copy:
+        src: ansible_self/mongo.repo
+        dest: /etc/yum.repos.d/mongo.repo
 
