--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -12,4 +12,23 @@
       ansible.builtin.copy:
         src: mongo.repo
         dest: /etc/yum.repos.d/mongo.repo
+    - name: Install MongoDB
+      ansible.builtin.package:
+        name: mongodb-org
+        state: present
+    - name: Enable and start MongoDB service
+      ansible.builtin.service:
+        name: mongod
+        enabled: yes
+        state: started
+    - name: allow remote conncections
+      ansible.builtin.replace:
+        path: /etc/mongod.conf
+        regexp: '127.0.0.1'
+        replace: '0.0.0.0'
+    - name: start and enable mongodb
+      ansible.builtin.service:
+        name: mongod
+        state: restarted
+         
 
