--- a/roles/mongodb/tasks/main.yaml
+++ b/roles/mongodb/tasks/main.yaml
@@ -10,7 +10,7 @@
         msg: "Task started!"
     - name: Move mongo.repo file
       ansible.builtin.copy:
-        src: mongo.repo
+        src: ../files/mongo.repo
         dest: /etc/yum.repos.d/mongo.repo
     - name: Install MongoDB
       ansible.builtin.package:
